--- a/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
+++ b/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
@@ -76,6 +76,76 @@
                 matSortDirection="asc"
                 matSortDisableClear
             >
+                <ng-container matColumnDef="Zone">
+                    <mat-header-cell *matHeaderCellDef
+                    >Zone Name
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.ZoneName
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="Branch">
+                    <mat-header-cell *matHeaderCellDef
+                    >Branch Name
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.BranchName
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="Circle">
+                    <mat-header-cell *matHeaderCellDef
+                    >Circle Code
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.CircleId
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="Dob">
+                    <mat-header-cell *matHeaderCellDef
+                    >Date of Birth
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.DOB
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="Ndd">
+                    <mat-header-cell *matHeaderCellDef
+                    >Next Due Date
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.NextDueDate
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="MajorBorrower">
+                    <mat-header-cell *matHeaderCellDef
+                    >Major Borrower
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.MajorBorrower
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="Lsn">
+                    <mat-header-cell *matHeaderCellDef
+                    >Loan Status Name
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.LoanStatusName
+                        }}</mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="Lcno">
                     <mat-header-cell *matHeaderCellDef
                     >LC #
@@ -136,6 +206,36 @@
                         }}</mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="descr">
+                    <mat-header-cell *matHeaderCellDef
+                    >DESCR
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.DESCR
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="empp">
+                    <mat-header-cell *matHeaderCellDef
+                    >Emp PPNO
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.EmpPPNO
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="l_stats">
+                    <mat-header-cell *matHeaderCellDef
+                    >Loan Status
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.LoanStatus
+                        }}</mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="Los">
                     <mat-header-cell *matHeaderCellDef
                     >loan Outstanding
@@ -145,6 +245,7 @@
                         report.LoanOutStanding
                         }}</mat-cell>
                 </ng-container>
+
                 <ng-container matColumnDef="OtherCharges">
                     <mat-header-cell *matHeaderCellDef
                     >Other Charges
