--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -110,8 +110,8 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Cnic">
-                    <mat-header-cell *matHeaderCellDef>Cnic</mat-header-cell>
-                    <mat-cell *matCellDef="let borrower">{{borrower.Cnic}}</mat-cell>
+                    <mat-header-cell style="min-width: 150px;" *matHeaderCellDef>Cnic</mat-header-cell>
+                    <mat-cell style="min-width: 150px;" *matCellDef="let borrower">{{borrower.Cnic}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="PhoneNumber">
