--- a/src/app/modules/customer/authorized-customers/authorized-customers.component.html
+++ b/src/app/modules/customer/authorized-customers/authorized-customers.component.html
@@ -38,8 +38,8 @@
         </ng-container>
 
         <ng-container matColumnDef="Cnic">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>Cnic</mat-header-cell>
-          <mat-cell *matCellDef="let customer">{{customer.Cnic}}</mat-cell>
+          <mat-header-cell style="min-width: 150px;" *matHeaderCellDef mat-sort-header>Cnic</mat-header-cell>
+          <mat-cell style="min-width: 150px;" *matCellDef="let customer">{{customer.Cnic}}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="CurrentAddress">
