--- a/src/app/modules/deceased-customer/referback-deceased/referback-deceased.component.html
+++ b/src/app/modules/deceased-customer/referback-deceased/referback-deceased.component.html
@@ -30,8 +30,8 @@
                 <mat-cell *matCellDef="let DeceasedCustomer">{{DeceasedCustomer.DeathDate}}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="Cnic">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>CNIC</mat-header-cell>
-                <mat-cell *matCellDef="let DeceasedCustomer">{{DeceasedCustomer.Cnic}}</mat-cell>
+                <mat-header-cell style="min-width: 150px;" *matHeaderCellDef mat-sort-header>CNIC</mat-header-cell>
+                <mat-cell style="min-width: 150px;" *matCellDef="let DeceasedCustomer">{{DeceasedCustomer.Cnic}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="address">
