--- a/src/app/modules/land-creation/land-history/land-history.component.html
+++ b/src/app/modules/land-creation/land-history/land-history.component.html
@@ -31,8 +31,8 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Cnic">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Cnic</mat-header-cell>
-                    <mat-cell *matCellDef="let land">{{land.Cnic}}</mat-cell>
+                    <mat-header-cell style="min-width: 150px;" *matHeaderCellDef mat-sort-header>Cnic</mat-header-cell>
+                    <mat-cell style="min-width: 150px;" *matCellDef="let land">{{land.Cnic}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="BranchId">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>BranchId</mat-header-cell>
