--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -102,7 +102,7 @@
                             <tr class="table-header-background">
                                 <th>Customer Id</th>
                                 <th>Customer Name</th>
-                                <th>Cnic</th>
+                                <th style="min-width: 150px;">Cnic</th>
                                 <th>Father Name</th>
                                 <th>AGPS</th>
                                 <th>DOB</th>
@@ -113,7 +113,7 @@
 
                                 <td>{{item.CustomerId}}</td>
                                 <td>{{item.CustomerName}}</td>
-                                <td>{{item.Cnic}}</td>
+                                <td style="min-width: 150px;" >{{item.Cnic}}</td>
                                 <td>{{item.FatherName}}</td>
                                 <td>{{item.Agps}}</td>
                                 <td>{{item.DOB | date: 'dd-MM-yyyy'}}</td>
