--- a/src/app/modules/report-managment/ecib-queue/ecib-queue.component.html
+++ b/src/app/modules/report-managment/ecib-queue/ecib-queue.component.html
@@ -87,8 +87,8 @@
             </ng-container>
 
             <ng-container matColumnDef="CNIC">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="mat-sort-header-container">CNIC</mat-header-cell>
-                <mat-cell *matCellDef="let ecibListFull">{{ecibListFull.Cnic}}</mat-cell>
+                <mat-header-cell style="min-width: 150px;" *matHeaderCellDef mat-sort-header class="mat-sort-header-container">CNIC</mat-header-cell>
+                <mat-cell style="min-width: 150px;" *matCellDef="let ecibListFull">{{ecibListFull.Cnic}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="STATUS">
