--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -37,10 +37,10 @@
         </button>
 
 
-        <span class="flex ml-4  ">
-            <span class=" text-md font-bold">Name : <span class=" text-sm ml-1 font-medium text-green">{{user?.DisplayName}}</span></span>
-             <span class=" text-md font-bold ml-4 ">PPNo. :<span class=" text-sm ml-1 font-medium text-green">{{user?.UserName}}</span></span>
-            <span class=" text-md font-bold ml-4">Branch Name :<span class=" text-sm ml-1 font-medium text-green">{{user?.BranchName}}</span></span>
+        <span class="flex ml-auto">
+            <span *ngIf="user?.DisplayName" class=" text-md font-bold">Name : <span class=" text-sm ml-1 font-medium text-green">{{user?.DisplayName}}</span></span>
+             <span *ngIf="user?.UserName" class=" text-md font-bold ml-4 ">PPNo. :<span class=" text-sm ml-1 font-medium text-green">{{user?.UserName}}</span></span>
+            <span *ngIf="user?.BranchName"  class=" text-md font-bold ml-4">Branch Name :<span class=" text-sm ml-1 font-medium text-green">{{user?.BranchName}}</span></span>
         </span>
 
         <!-- Components -->
