--- a/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
+++ b/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
@@ -32,7 +32,7 @@
                                 [longitude]="isNumber(coordinate?.Longitude)" [agmFitBounds]="true">
 
                     </agm-marker>
-
+<!--                                   [restriction]="countryRestriction"-->
 <!--                   <agm-marker *ngFor="let m of fenceMarkers; let i = index"-->
 <!--                               (markerClick)="gm.lastOpen?.close();-->
 <!--                                gm.lastOpen = infoWindow;-->
