--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -137,13 +137,13 @@
                 <!-- StartTime Column -->
                 <ng-container matColumnDef="StartTime">
                     <th mat-header-cell *matHeaderCellDef>Start Time</th>
-                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories?.StartTime}}</td>
+                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories?.TrackingStartTime}}</td>
                 </ng-container>
 
                 <!-- StopTime Column -->
                 <ng-container matColumnDef="StopTime">
                     <th mat-header-cell *matHeaderCellDef>Stop Time</th>
-                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories?.StopTime}}</td>
+                    <td mat-cell *matCellDef="let LocationHistories">{{LocationHistories?.TrackingStopTime}}</td>
                 </ng-container>
 
                 <!-- Title Column -->
