--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -510,3 +510,26 @@ button[aria-expanded=false] .down {
 //     background-color: #f6fcf8;
 //   }
 // }
+
+@media only screen and (max-width: 600px) {
+  .mat-table {
+    overflow-x: scroll;
+    max-width: 400px;
+  }
+
+.mat-cell,
+.mat-header-cell {
+  word-wrap: initial;
+  display: table-cell;
+  padding: 0px 10px;
+  line-break: unset;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  vertical-align: middle;
+}
+.mat-row,
+.mat-header-row {
+  display: table-row;
+}
+}
