--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -1,4 +1,5 @@
-<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div
+    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <!-- Header -->
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
@@ -7,8 +8,8 @@
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
                 <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
-                color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                aria-expanded="false" aria-controls="collapseExample">
+                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
                     <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
                     Advance Filter
@@ -23,145 +24,91 @@
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div
-            [formGroup]="loanutilizationSearch">
+                [formGroup]="loanutilizationSearch">
 
 
-            <div class="flex" style="flex-wrap: wrap;">
-                <app-zone-branch-circle [form]="loanutilizationSearch" [should_show_circle]="false"
-                                        (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-                 <div class="mx-2" style="width: 225px;">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">From </mat-label>
-                        <input matInput  [matDatepicker]="picker2" formControlName="FromDate" maxlength="8"
-                               autocomplete="off" [max]="getToday()" (dateChange)="setFromDate()" appNumberOnly/>
-                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                        <mat-datepicker #picker2></mat-datepicker>
-
-    <!--                    <mat-error *ngIf="hasError('TransactionDate', 'required')">Transaction Date <strong>required</strong>-->
-    <!--                    </mat-error>-->
-                    </mat-form-field>
-                </div>
-                <div class="mx-2" style="width: 225px;">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">To</mat-label>
-                        <input matInput readonly appNumberOnly [matDatepicker]="picker1" placeholder="ddMMyyyy" formControlName="ToDate"
-                            [min]="minDate" [max]="getTodayForTo()" (dateChange)="setToDate()" autocomplete="off">
-                        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                        <mat-datepicker #picker1></mat-datepicker>
-                    </mat-form-field>
-                </div>
-                <div class="mx-2" style="width: 225px;" >
-                    <div class="col-md-12 kt-margin-bottom-10-mobile mr-4">
+                <div class="flex" style="flex-wrap: wrap;">
+                    <app-zone-branch-circle [form]="loanutilizationSearch" [should_show_circle]="true"
+                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                    <div class="mx-2" style="width: 225px;">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label>LoanCaseNo</mat-label>
-                            <input appNumberOnly matInput formControlName="LoanCaseNo" placeholder="Enter LoanCaseNo" maxlength="100"
-                                autocomplete="off">
+                            <mat-label class="customMatLabel">From</mat-label>
+                            <input matInput [matDatepicker]="picker2" formControlName="FromDate" maxlength="8"
+                                   autocomplete="off" [max]="getToday()" (dateChange)="setFromDate()" appNumberOnly/>
+                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                            <mat-datepicker #picker2></mat-datepicker>
+
+                            <!--                    <mat-error *ngIf="hasError('TransactionDate', 'required')">Transaction Date <strong>required</strong>-->
+                            <!--                    </mat-error>-->
                         </mat-form-field>
                     </div>
-                </div>
-        
-                <div class="mx-2" >
-        
-                    <div *ngIf="loanutilizationStatusLov" class="col-md-12 kt-margin-bottom-10-mobile" style="width: 225px;" >
+                    <div class="mx-2" style="width: 225px;">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label>Select loanutilization Status</mat-label>
-                            <mat-select formControlName="loanutilizationStatus">
-                                <mat-option value="">
-                                    Select
-                                </mat-option>
-                                <mat-option *ngFor="let obj of loanutilizationStatusLov.LOVs" [value]="obj.Value">
-                                    {{obj.Name}}
-                                </mat-option>
-                            </mat-select>
+                            <mat-label class="customMatLabel">To</mat-label>
+                            <input matInput readonly appNumberOnly [matDatepicker]="picker1" placeholder="ddMMyyyy"
+                                   formControlName="ToDate"
+                                   [min]="minDate" [max]="getTodayForTo()" (dateChange)="setToDate()"
+                                   autocomplete="off">
+                            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                            <mat-datepicker #picker1></mat-datepicker>
                         </mat-form-field>
                     </div>
-        
-        
-                </div>
-                <div  style="width: 225px;" >
-                    <div class="flex flex-shrink-0 items-center  mb-2">
-                        <button
-                        aria-controls="collapseExample" (click)="searchloanutilization()" class="mt-2 bg-gray-500" mat-flat-button [color]="'primary'">
-                            <mat-icon class="mr-2">search</mat-icon> Search
-                        </button>
+                    <div class="mx-2" style="width: 225px;">
+                        <div class="col-md-12 kt-margin-bottom-10-mobile mr-4">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label>LoanCaseNo</mat-label>
+                                <input appNumberOnly matInput formControlName="LoanCaseNo"
+                                       placeholder="Enter LoanCaseNo" maxlength="100"
+                                       autocomplete="off">
+                            </mat-form-field>
+                        </div>
                     </div>
+
+                    <div class="mx-2">
+
+                        <div *ngIf="loanutilizationStatusLov" class="col-md-12 kt-margin-bottom-10-mobile"
+                             style="width: 225px;">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label>Select loanutilization Status</mat-label>
+                                <mat-select formControlName="loanutilizationStatus">
+                                    <mat-option value="">
+                                        Select
+                                    </mat-option>
+                                    <mat-option *ngFor="let obj of loanutilizationStatusLov?.LOVs" [value]="obj.Value">
+                                        {{obj.Name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+
+
+                    </div>
+                    <div style="width: 225px;">
+                        <div class="flex flex-shrink-0 items-center  mb-2">
+                            <button
+                                aria-controls="collapseExample" (click)="searchloanutilization()"
+                                class="mt-2 bg-gray-500" mat-flat-button [color]="'primary'">
+                                <mat-icon class="mr-2">search</mat-icon>
+                                Search
+                            </button>
+                        </div>
+                    </div>
+
+
                 </div>
-        
-
-            </div>
-
-
-
-
-
-
-
-    <!--            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
-
-    <!--                <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
-    <!--                    <mat-label class="customMatLabel">Circle</mat-label>-->
-
-    <!--                    <mat-select [(ngModel)]="selected_c" formControlName="Circle" [disabled]="disable_circle">-->
-    <!--                        <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"-->
-    <!--                        >-->
-    <!--                            {{circle?.CircleCode}}-->
-    <!--                        </mat-option>-->
-    <!--                    </mat-select>-->
-    <!--                </mat-form-field>-->
-    <!--            </div>-->
-
-
-    <!--            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4" *ngIf="!isUserAdmin && !isZoneUser">-->
-    <!--                <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
-    <!--                    <mat-label>Branch</mat-label>-->
-    <!--                    <input matInput formControlName="Branch" readonly="readonly" maxlength="30" autocomplete="off">-->
-    <!--                    &lt;!&ndash;  <mat-error *ngIf="hasError('loanutilizationName', 'required')">loanutilizationName <strong>required</strong></mat-error>&ndash;&gt;-->
-    <!--                </mat-form-field>-->
-    <!--            </div>-->
-    <!--            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4" *ngIf="isUserAdmin || isZoneUser">-->
-    <!--                <mat-form-field class="mat-form-field-fluid map-fields" appearance="outline" *ngIf="!BMUser">-->
-    <!--                    <mat-label>Branch</mat-label>-->
-    <!--                    <mat-select (selectionChange)="SetBranches($event)" formControlName="BranchId">-->
-    <!--                        <mat-option>-->
-    <!--                            <ngx-mat-select-search placeholderLabel="Search Branch..."-->
-    <!--                                (focusout)="validateBranchOnFocusOut()" noEntriesFoundLabel="No Branch Found"-->
-    <!--                                (keyup)="searchBranch($event.target.value)">-->
-    <!--                            </ngx-mat-select-search>-->
-    <!--                        </mat-option>-->
-    <!--                        <mat-option>-->
-    <!--                            Select-->
-    <!--                        </mat-option>-->
-    <!--                        <mat-option *ngFor="let branch of SelectedBranches" [value]="branch.BranchId">-->
-    <!--                            {{branch.Name }}-->
-    <!--                        </mat-option>-->
-    <!--                    </mat-select>-->
-    <!--                </mat-form-field>-->
-    <!--            </div>-->
-
-
-    <div class="row">
-
-
-
-
 
 
             </div>
-
-        </div>
         </div>
     </div>
-
-
-
-
 
 
     <!-- Main -->
     <div class="flex flex-auto overflow-scroll">
 
         <!-- Products list -->
-        <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-scroll" style="flex-direction: column;">
+        <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-scroll"
+             style="flex-direction: column;">
             <div class="flex flex-col flex-auto sm:mb-2  overflow-scroll" [style.height]="gridHeight">
                 <mat-table class="lmat-elevation-z8"
                            #table
@@ -172,11 +119,11 @@
                            matSortDirection="asc"
                            matSortDisableClear>
 
-<!--                    <ng-container matColumnDef="BranchName">-->
-<!--                        &lt;!&ndash; ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview &ndash;&gt;-->
-<!--                        <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Name</mat-header-cell>-->
-<!--                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.BranchName}}</mat-cell>-->
-<!--                    </ng-container>-->
+                    <!--                    <ng-container matColumnDef="BranchName">-->
+                    <!--                        &lt;!&ndash; ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview &ndash;&gt;-->
+                    <!--                        <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Name</mat-header-cell>-->
+                    <!--                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.BranchName}}</mat-cell>-->
+                    <!--                    </ng-container>-->
 
                     <ng-container matColumnDef="BranchCode">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Code</mat-header-cell>
@@ -222,7 +169,6 @@
                         <mat-header-cell *matHeaderCellDef mat-sort-header>prod Dev Flag</mat-header-cell>
                         <mat-cell *matCellDef="let loanutilization">{{loanutilization.prodDevFlag}}</mat-cell>
                     </ng-container>
-
 
 
                     <ng-container matColumnDef="Balance">
@@ -277,7 +223,8 @@
                       </mat-cell>
                     </ng-container> -->
 
-                    <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background"></mat-header-row>
+                    <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;"
+                                    class="table-header-background"></mat-header-row>
 
                     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 
@@ -296,7 +243,7 @@
     <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
         Items per page:
         <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
-            style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+                    style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
             <mat-option [value]="5">5</mat-option>
             <mat-option [value]="10">10</mat-option>
             <mat-option [value]="25">25</mat-option>
@@ -304,7 +251,7 @@
         </mat-select>
         <button (click)="paginate(1)">First</button>
         <pagination-controls display="inline" (pageChange)="paginate($event)"
-            style="display: inline-block;"></pagination-controls>
+                             style="display: inline-block;"></pagination-controls>
         <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
         <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
 
