loan utilization bug fixed

--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -45,7 +45,7 @@
                                 <mat-option value="">
                                     Select
                                 </mat-option>
-                                <mat-option *ngFor="let obj of loanutilizationStatusLov.LOVs" [value]="obj.Value">
+                                <mat-option *ngFor="let obj of loanutilizationStatusLov?.LOVs" [value]="obj.Value">
                                     {{obj.Name}}
                                 </mat-option>
                             </mat-select>
