--- a/src/app/modules/reschedule-cases/pending-reschedule-cases/pending-reschedule-cases.component.html
+++ b/src/app/modules/reschedule-cases/pending-reschedule-cases/pending-reschedule-cases.component.html
@@ -7,6 +7,72 @@
         </div>
     </div>
 
+    <div [formGroup]="pendingForm">
+        <!-- <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+
+            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <mat-label class="customMatLabel">PP No.</mat-label>
+                <input matInput placeholder="PP No." formControlName="PPNo" maxlength="30"
+                       autocomplete="off"/>
+            </mat-form-field>
+        </div> -->
+
+
+        <div class="flex" style="flex-wrap: wrap;">
+            <app-zone-branch-circle [form]="pendingForm" [should_show_circle]="false"
+                                    (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">Application Date(ddMMyyyy) <strong class="matMandatory">*</strong>
+                        </mat-label>
+                        <input readonly="readonly" matInput [matDatepicker]="picker3" formControlName="TrDate"
+                               [max]="maxDate">
+                        <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
+                        <mat-datepicker #picker3></mat-datepicker>
+                        <!--<mat-error *ngIf="hasError('AppDate', 'required')">Application Date <strong>required</strong></mat-error>-->
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">Loan Case#</mat-label>
+                        <input matInput placeholder="Enter Loan Case No" formControlName="Lcno" maxlength="10"
+                               autocomplete="off"/>
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label>Select Status</mat-label>
+                        <mat-select formControlName="Status" [disabled]="true">
+                            <mat-option *ngFor="let status of SelectedLoanStatus" [value]="status.Id">
+                                {{status.Name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+
+                    <button class="bg-gray-500 mt-2"  mat-raised-button color="primary"
+                            type="button" (click)="find()">
+                        <mat-icon class="mr-2">search</mat-icon>
+                        Search
+                    </button>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
+
 
     <div class="border shadow-xs rounded-sm bg-gray-50 " style="flex-direction: column;overflow-y: scroll">
         <mat-table class="example-table-container"
@@ -75,7 +141,7 @@
 
         </mat-table>
     </div>
-    
+
     <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
         Items per page:
         <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
