--- a/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
+++ b/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
@@ -27,59 +27,11 @@
             <div  [formGroup]="RfrlForm">
 
                 <div class="row">
+                    <app-zone-branch-circle [form]="RfrlForm" [should_show_circle]="false"
+                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-        
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
-                                <mat-label class="customMatLabel">Zone</mat-label>
-                                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
-                                    <mat-option [value]="SelectedZones?.ZoneId">
-                                        {{SelectedZones?.ZoneName}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
-                                <mat-label class="customMatLabel">Zone</mat-label>
-                                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
-                                            (selectionChange)="changeZone($event)">
-                                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                                [disabled]="disable_zone">
-                                        {{zone?.ZoneName}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                
-                
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-        
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                                
-                                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                                            *ngIf="single_branch">
-                                    <mat-option [value]="SelectedBranches?.BranchCode"
-                                    >
-                                        {{SelectedBranches?.Name}}
-                                    </mat-option>
-                                </mat-select>
-                
-                                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                                            *ngIf="!single_branch">
-                                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
-                                    >
-                                        {{branch?.Name}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-12">
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-        
+
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Cnic <strong class="matMandatory">*</strong></mat-label>
                                 <input matInput placeholder="Enter Cnic" formControlName="Cnic" maxlength="13" autocomplete="off"
@@ -90,7 +42,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-        
+
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Application Date(ddMMyyyy) <strong class="matMandatory">*</strong>
                                 </mat-label>
@@ -103,12 +55,12 @@
                         </div>
                     </div>
                 </div>
-        
+
                 <div class="row">
 
                     <div class="col-lg-3 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-        
+
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Branch Remarks<strong class="matMandatory">*</strong></mat-label>
                                 <input matInput placeholder="Enter Branch Remarks" formControlName="Remarks" autocomplete="off"/>
@@ -120,7 +72,7 @@
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Request Category <strong class="matMandatory">*</strong></mat-label>
                                 <mat-select (selectionChange)="onSelectionChange($event)" formControlName="RequestCategory">
-                
+
                                     <mat-option *ngFor="let Request of SelectedRequestType" [value]="Request.Id">
                                         {{Request.Name}}
                                     </mat-option>
@@ -155,10 +107,10 @@
                         </div>
                     </div>
                 </div>
-        
-        
-        
-          
+
+
+
+
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" *ngIf="Field">
                     <mat-form-field class="mat-form-field-fluid" appearance="outline">
                         <mat-label class="customMatLabel"><em>No Record Found</em></mat-label>
@@ -171,7 +123,7 @@
                         <input matInput placeholder="No Record Found" autocomplete="off" readonly="readonly"/>
                     </mat-form-field>
                 </div>
-        
+
             </div>
         </div>
       </div>
