--- a/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
+++ b/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
@@ -67,7 +67,7 @@
                 <mat-progress-bar [mode]="'indeterminate'" *ngIf="!loaded"></mat-progress-bar>
             </div> -->
 
-            <div class="mat-table__wrapper">
+            <div class="mat-table__wrapper overflow-scroll border shadow-xs rounded-sm bg-gray-50 " [style.height]="gridHeight">
                 <!--[style.height]="gridHeight"-->
                 <mat-table
                     class="lmat-elevation-z8"
@@ -141,15 +141,6 @@
                             }}</mat-cell>
                     </ng-container>
 
-                    <ng-container matColumnDef="Lsn">
-                        <mat-header-cell *matHeaderCellDef
-                        >Loan Status Name
-                        </mat-header-cell
-                        >
-                        <mat-cell *matCellDef="let report">{{
-                            report.LoanStatusName
-                            }}</mat-cell>
-                    </ng-container>
 
                     <ng-container matColumnDef="Lcno">
                         <mat-header-cell *matHeaderCellDef
@@ -162,8 +153,8 @@
                     </ng-container>
 
                     <ng-container matColumnDef="Cnic">
-                        <mat-header-cell *matHeaderCellDef>CNIC</mat-header-cell>
-                        <mat-cell *matCellDef="let report">{{
+                        <mat-header-cell style="min-width: 120px;" *matHeaderCellDef>CNIC</mat-header-cell>
+                        <mat-cell style="min-width: 120px;" *matCellDef="let report">{{
                             report.Cnic
                             }}</mat-cell>
                     </ng-container>
@@ -191,12 +182,12 @@
                             }}</mat-cell>
                     </ng-container>
 
-                    <ng-container matColumnDef="Agps">
+                    <ng-container  matColumnDef="Agps">
                         <mat-header-cell *matHeaderCellDef
                         >Major Borrower
                         </mat-header-cell
                         >
-                        <mat-cell *matCellDef="let report">{{
+                        <mat-cell class="text-center" *matCellDef="let report">{{
                             report.MajorBorrower
                             }}</mat-cell>
                     </ng-container>
@@ -221,25 +212,6 @@
                             }}</mat-cell>
                     </ng-container>
 
-                    <ng-container matColumnDef="empp">
-                        <mat-header-cell *matHeaderCellDef
-                        >Emp PPNO
-                        </mat-header-cell
-                        >
-                        <mat-cell *matCellDef="let report">{{
-                            report.EmpPPNO
-                            }}</mat-cell>
-                    </ng-container>
-
-                    <ng-container matColumnDef="l_stats">
-                        <mat-header-cell *matHeaderCellDef
-                        >Loan Status
-                        </mat-header-cell
-                        >
-                        <mat-cell *matCellDef="let report">{{
-                            report.LoanStatus
-                            }}</mat-cell>
-                    </ng-container>
 
                     <ng-container matColumnDef="Los">
                         <mat-header-cell *matHeaderCellDef
