--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -517,19 +517,18 @@ button[aria-expanded=false] .down {
     max-width: 400px;
   }
 
-.mat-cell,
-.mat-header-cell {
-  word-wrap: initial;
-  display: table-cell;
-  padding: 0px 10px;
-  line-break: unset;
-  width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  vertical-align: middle;
-}
+
 .mat-row,
 .mat-header-row {
   display: table-row;
 }
+}
+
+td {
+  padding-left: 14px !important;
+  
+}
+
+mat-header-cell{
+  padding-left: 14px;
 }
