style fixes bench marking and search utilization

--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -43,7 +43,7 @@
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
-                            <button mat-raised-button class="bg-gray-500 mat-primary"
+                            <button mat-raised-button class="bg-gray-500 mat-primary mt-2"
                                     type="button" (click)="search()">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Search
