--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="mx-2">
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                        <button (click)="searchloanutilization()" class="bg-gray-500" mat-flat-button
+                        <button (click)="searchloanutilization()" class="bg-gray-500 mt-2" mat-flat-button
                                 [color]="'primary'">
                             <mat-icon class="mr-2">search</mat-icon>
                             Search
