--- a/src/app/modules/customer/referback-customers/referback-customers.component.html
+++ b/src/app/modules/customer/referback-customers/referback-customers.component.html
@@ -1,6 +1,6 @@
 <div class="px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
 
-  <div class="row py-3">
+  <div class="row pt-3">
     <div class="col-lg-12 col-sm-12">
         <div class="heading">Refer Back Customer</div>
     </div>
