--- a/src/app/modules/geo-fencing/device-tracking/device-tracking.component.html
+++ b/src/app/modules/geo-fencing/device-tracking/device-tracking.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
                         color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                         aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
@@ -24,7 +24,7 @@
 
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
-            <div class="row" [formGroup]="viewForm">
+            <div class="flex" style="flex-wrap: wrap;" [formGroup]="viewForm">
                 <app-zone-branch-circle [form]="viewForm" [should_show_circle]="true"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
