--- a/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
+++ b/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
@@ -2,19 +2,17 @@
     
     
     <div class="row pt-3">
-        <div class="col-lg-10 col-sm-12">
+        <div class="col-lg-9 col-sm-12">
             <div class="heading">Assign Pages</div>
         </div>
-        <div class="col-lg-2 col-sm-12 self-center mt-2 ">
-            <p class="text-right">
-                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+        <div class="col-lg-3 col-sm-12 self-center mt-1 text-end ">
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
                         color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                         aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
                     <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
                     Advance Filter
                 </button>
-              </p>
         </div>
     </div>
 
