--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -3,7 +3,7 @@
     <!-- Header -->
 
 
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-10 col-sm-12">
             <div class="heading">Roles list</div>
         </div>
