--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -14,7 +14,7 @@
                     <mat-icon class="mr-2 text-white">visibility</mat-icon>
                     View Map
                 </button>
-                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
                         color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                         aria-expanded="false" aria-controls="collapseExample">
                     <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
